frontend/tests/cases/negative/notInScopeInterfaceForInstance.gr
-- use of an interface that hasn't been defined
instance Foo Bool where
  simple x = x
